refactor -> remove HeroDataWrapperController.java